2010-01-26  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs, win32/setup/wix_mutex.pl: XMPlay file associations

* win32/xmplay/xmp-asap.c: got seek working

* win32/Makefile, maketar.pl: replaced maketar.pl with tar,
  get versioned files from git

* Makefile, win32/Makefile: simplified asciidoc calls using pipes

* asap.h, csharp/ASAP.ppcs, flash/ASAP_ModuleInfo.as,
  java/ASAP_ModuleInfo.java, javascript/asap.ppjs:
  song_pos size changed from 128 to ASAP_SONGS_MAX

* win32/xmplay/xmp-asap.c: close files so that "File information" works

* asapconv.c, PORTS.xml: options to set TIME in SAP


2010-01-25  Piotr Fusik  <fox@scene.pl>
* win32/xmplay/xmp-asap.c, win32/xmplay/xmpfunc.h, win32/xmplay/xmpin.h,
  win32/gui.rc, win32/Makefile, win32/setup/asap.wxs, README, win32/USAGE,
  PORTS.xml: XMPlay plugin

* csharp/ASAP.ppcs, csharp/Makefile: documented the API

* asapconv.c: options to set AUTHOR, NAME and DATE when converting to SAP
  or editing SAP

* asap.h, xbmc/xbmc_asap.c, win32/info_dlg.c, win32/foobar2000/foo_asap.cpp:
  created ASAP_INFO_CHARS


2010-01-24  Piotr Fusik  <fox@scene.pl>
* asap2wav.c, asapconv.c, Makefile, INSTALL, README, PORTS.xml, win32/Makefile,
  win32/USAGE, win32/setup/asap.wxs: replaced asap2wav with asapconv,
  which can also convert native modules to and from the SAP format


2010-01-19  Piotr Fusik  <fox@scene.pl>
* README, INSTALL: switched from CVS to Git


2010-01-18  Piotr Fusik  <fox@scene.pl>
* win32/foobar2000/foo_asap.cpp: removed masks from file type descriptions


2010-01-17  Piotr Fusik  <fox@scene.pl>
* asap.c: reuse string constants

* asap.c: use parse_cmc() for all CMC clones

* win32/settings_dlg.c, win32/settings_dlg.h, win32/foobar2000/foo_asap.cpp:
  same code for returning song duration and setting duration for song playback

* win32/foobar2000/foo_asap.cpp, win32/gui.rc, win32/settings_dlg.c,
  win32/settings_dlg.h, win32/Makefile, README, PORTS.xml,
  win32/setup/asap.wxs: upgraded to foobar2000 1.0
